tests/e2e/fail/integer_condition_u16.ep
# COMPILE_ERROR: if condition requires bool, got u16
fun main(): void {
    if 1u16 {
        os.ExitProcess(1)
    }
}
